# todos-ai-assistant

./: .coverage  .flake8  .gitignore  .sample.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: .coveragerc  main.py
app/core/: config.py
app/database/: __init__.py  session.py
app/database/models/: schedule.py  users.py
app/routes/: schedule.py  users.py
app/schemas/: __init__.py  auth.py  schedule.py  vapi_schema.py
app/services/: schedule.py  users.py
app/tests/: test_main.py
app/utils/: exceptions.py  vapi.py
